create github pages

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="index.html"><img src="assets/images/unnamed-290x128.png" class="mbr-navbar__brand-img mbr-brand__img" alt="Mobirise"></a></span>
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://mobirise.com">Foreign Dream Overseas</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="index.html">Foreign Dream Overseas</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/t">free amp templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-1" data-rv-view="23" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.me/w">free html5 templates</a></section><section class="mbr-slider mbr-section mbr-section--no-padding carousel slide" data-ride="carousel" data-wrap="true" data-interval="5000" id="slider-1" data-rv-view="23" style="background-color: rgb(255, 255, 255);">
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
